--- a/gym/hex/Cargo.toml
+++ b/gym/hex/Cargo.toml
@@ -19,7 +19,9 @@ name = "hexgame"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
+bincode = "1.3.3"
 serde = {version = "1.0.137", features = ["derive"] }
 serde_json = "1.0.81"
+serde-pickle = "1.0"
 pyo3 = { version = "0.16.5", features = ["extension-module"] }
 numpy = "0.16"
