--- a/environment.yml
+++ b/environment.yml
@@ -14,6 +14,7 @@ dependencies:
     - gym==0.25.0
     - matplotlib==3.5.2
     - maturin==0.12.17
+    - monkeytype==22.2.0
     - numba==0.56.0
     - numpy==1.22.4
     - pandas==1.4.2
