--- a/environment.yml
+++ b/environment.yml
@@ -5,29 +5,29 @@ channels:
   - defaults
 dependencies:
   - cudatoolkit=11.6.0
-  - pip=22.2.2
+  - pip
   - python=3.9.13
-  - pytorch=1.12.1
-  - torchaudio=0.12.1
-  - torchvision=0.13.1
+  - pytorch
+  - torchaudio
+  - torchvision
   - pip:
-    - gym==0.25.0
-    - matplotlib==3.5.2
-    - maturin==0.12.17
+    - gym
+    - matplotlib
+    - maturin
     - numba==0.56.0
     - numpy==1.21.0
-    - pandas==1.4.2
-    - protobuf==3.19.4
-    - psutil==5.9.1
-    - pygame==2.1.2
-    - pyglet==1.5.23
-    - pytorch-lightning==1.6.4
-    - onnx==1.12.0
-    - onnxruntime==1.12.1
-    - scikit-image==0.19.3
-    - scipy==1.8.0
-    - seaborn==0.11.2
+    - pandas
+    - protobuf
+    - psutil
+    - pygame
+    - pyglet
+    - pytorch-lightning
+    - onnx
+    - onnxruntime
+    - scikit-image
+    - scipy
+    - seaborn
     - setuptools==59.5.0
-    - tabulate==0.8.10
-    - tensorboard==2.9.0
-    - tqdm==4.64.0
+    - tabulate
+    - tensorboard
+    - tqdm
