--- a/environment.yml
+++ b/environment.yml
@@ -12,9 +12,10 @@ dependencies:
   - torchvision
   - pip:
     - gym
+    - humanize
     - matplotlib
     - maturin
-    - monkeytype==22.2.0
+    - monkeytype
     - numba==0.56.0
     - numpy==1.21.0
     - pandas
@@ -31,4 +32,5 @@ dependencies:
     - setuptools==59.5.0
     - tabulate
     - tensorboard
+    - torchinfo
     - tqdm
