--- a/gym/hex/Cargo.toml
+++ b/gym/hex/Cargo.toml
@@ -18,10 +18,14 @@ lto = true
 name = "hexgame"
 crate-type = ["cdylib", "rlib"]
 
+[[bin]]
+name = "test"
+
 [dependencies]
 bincode = "1.3.3"
 serde = {version = "1.0.137", features = ["derive"] }
 serde_json = "1.0.81"
 serde-pickle = "1.0"
-pyo3 = { version = "0.16.5", features = ["extension-module"] }
-numpy = "0.16"
+pyo3 = { version = "0.17", features = ["extension-module"] }
+numpy = "0.17"
+crossbeam = "0.8"
