--- a/gym/hex/Cargo.toml
+++ b/gym/hex/Cargo.toml
@@ -28,4 +28,6 @@ serde_json = "1.0.81"
 serde-pickle = "1.0"
 pyo3 = { version = "0.17", features = ["extension-module"] }
 numpy = "0.17"
+dict_derive = "0.4.0"
 crossbeam = "0.8"
+
