--- a/gym/hex/Cargo.toml
+++ b/gym/hex/Cargo.toml
@@ -7,6 +7,7 @@ license = "GPL-3.0-or-later"
 description = "Simple and performant implementation of the Hex board game"
 repository = "https://github.com/MartinAltmayer/hexgame"
 categories = ["games"]
+default-run = "hexgame"
 
 [target.'cfg(any(windows, unix))']
 rustflags = ["-C target-cpu=native"]
@@ -30,4 +31,5 @@ pyo3 = { version = "0.17", features = ["extension-module"] }
 numpy = "0.17"
 dict_derive = "0.4.0"
 crossbeam = "0.8"
+rand = "0.8"
 
