--- a/gym/hex/Cargo.toml
+++ b/gym/hex/Cargo.toml
@@ -31,4 +31,4 @@ pyo3 = { version = "0.17", features = ["extension-module"] }
 numpy = "0.17"
 crossbeam = "0.8"
 rand = "0.8"
-
+core_affinity = "0.5"
