--- a/environment.yml
+++ b/environment.yml
@@ -25,6 +25,7 @@ dependencies:
     - pygame
     - pyglet
     - pytorch-lightning
+    - pyyaml
     - onnx
     - onnxoptimizer
     - onnxruntime
