--- a/gym/hex/Cargo.toml
+++ b/gym/hex/Cargo.toml
@@ -34,3 +34,6 @@ rand = "0.8"
 core_affinity = "0.7.*"
 itertools = "0.10"
 indextree = "4.5.0"
+atomic-option = "0.1.2"
+atomic_float = "0.1.0"
+atomic-array = "0.3.1"
