--- a/gym/hex/Cargo.toml
+++ b/gym/hex/Cargo.toml
@@ -38,3 +38,5 @@ atomic-option = "0.1.2"
 atomic_float = "0.1.0"
 atomic-array = "0.3.1"
 atomic_ref = "0.2.1"
+lazycell = "1.3.0"
+fixed = "1.20.0"
