--- a/gym/hex/Cargo.toml
+++ b/gym/hex/Cargo.toml
@@ -33,10 +33,7 @@ crossbeam = "0.8"
 rand = "0.8"
 core_affinity = "0.7.*"
 itertools = "0.10"
-indextree = "4.5.0"
-atomic-option = "0.1.2"
-atomic_float = "0.1.0"
-atomic-array = "0.3.1"
 atomic_ref = "0.2.1"
 lazycell = "1.3.0"
 fixed = "1.20.0"
+ndarray-stats = "0.5.1"
