--- a/gym/hex/Cargo.toml
+++ b/gym/hex/Cargo.toml
@@ -37,3 +37,4 @@ atomic_ref = "0.2.1"
 lazycell = "1.3.0"
 fixed = "1.20.0"
 ndarray-stats = "0.5.1"
+ort = { version = "1.13.1", features = ["cuda"] }
